tests/paczka1/fuzzy1/80736574.err
Error in line 2: A472 S286 58,6
Error in line 12: 8TiJw9w S286 79,4
Error in line 14: 8TiJw9w A472 98,4
Error in line 18: 4yY S286 183,65
Error in line 13: 4yY S286 67,7
Error in line 24: 4yY S272 77,2
Error in line 19: mLbqB7dOgK A472 57,1
Error in line 20: RuqhYDGbWS S272 180,7
Error in line 32: 8TiJw9w S286 4,2
Error in line 34: 8TiJw9w S272 65,9
